--- a/apps/test/.env
+++ b/apps/test/.env
@@ -1,10 +1,10 @@
 BCRYPT_SALT=10
 COMPOSE_PROJECT_NAME=amp_cltalg0po05lkl501v8kg1unq
 DB_NAME=my-db
-DB_PASSWORD=admin
+DB_PASSWORD=localpw
 DB_PORT=5432
-DB_URL=postgres://admin:admin@localhost:5432/my-db
-DB_USER=admin
+DB_URL=postgres://postgres:localpw@localhost:5432/my-db
+DB_USER=postgres
 JWT_EXPIRATION=2d
 JWT_SECRET_KEY=Change_ME!!!
 PORT=3000
